bugfix service buttons jump to the right on bigger screens

--- a/css/style.css
+++ b/css/style.css
@@ -1,22 +1,19 @@
 body {
-	font-family: Calibri, Verdana, Arial;
-	font-size: 14px;
+    font-family: Calibri, Verdana, Arial;
+    font-size: 14px;
     width: 80%;
     margin: 0 auto;
     text-align: left;
 }
-
 hr {
-  border: 1px solid #DDD;
-  width: 100%;
-  margin-top:20px;
+    border: 1px solid #DDD;
+    width: 100%;
+    margin-top: 20px;
 }
-
 textarea {
-	width: 80%;
-	height: 100px;
+    width: 80%;
+    height: 100px;
 }
-
 #header h1 {
     color: #293559;
 }
@@ -25,16 +22,16 @@ textarea {
 }
 .service {
     margin-bottom: 30px;
+    padding-top: 20px;
 }
 #freme-logo {
     width: 350px;
     margin-top: 40px;
 }
-
 .button {
     -webkit-border-radius: 9;
     -moz-border-radius: 9;
-	float: left;
+    float: left;
     border-radius: 9px;
     background: #293559;
     font-family: Arial;
@@ -45,7 +42,6 @@ textarea {
     text-decoration: none;
     display: block;
     margin-right: 20px;
-	margin-bottom: 10px;
 	margin-top: 10px;
     padding: 10px 20px 10px 20px;
 }
@@ -53,12 +49,9 @@ textarea {
     background: #aeb0bd;
     text-decoration: none;
 }
-
-
 .rightcol {
-	width: 70%;
+    width: 70%;
 }
-
 .outputs {
     clear: both;
 }
